--- a/silly-canny-lib/package.json
+++ b/silly-canny-lib/package.json
@@ -1,26 +1,18 @@
 {
   "name": "silly-canny-lib",
+  "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "./dist/silly-canny-lib.cjs",
-  "module": "./dist/silly-canny-lib.js",
-  "exports": {
-    ".": {
-      "import": "./dist/silly-canny-lib.js",
-      "require": "./dist/silly-canny-lib.umd.cjs"
-    },
-    "./dist/style.css": "./dist/style.css"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "vue": "^3.5.22"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
-    "vite": "^5.3.1"
+    "@vitejs/plugin-vue": "^6.0.1",
+    "vite": "^7.1.7"
   }
 }
