feat: working UI-library and started frontend project with some configs

--- a/silly-canny-lib/package.json
+++ b/silly-canny-lib/package.json
@@ -1,18 +1,24 @@
 {
   "name": "silly-canny-lib",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "description": "Small and silly Vue UI component library",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+  "private": false,
+  "bin": {
+    "silly-canny": "./bin/silly-canny.js"
   },
-  "dependencies": {
-    "vue": "^3.5.22"
+  "files": [
+    "components",
+    "bin"
+  ],
+  "scripts": {
+    "dev": "vite"
   },
   "devDependencies": {
+    "vue": "^3.5.22",
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "tailwindcss": "^4.1.15",
+    "@tailwindcss/vite": "^4.1.15"
   }
 }
