feat: (frontend) added vue-router, started HomeView.vue with 2 components: MobileHome.vue, DesktopHome.vue. Added BarGraph.vue to MobileHome.vue(fully done) and done left side design of DesktopHome.vue: Search bar, overall, outages today, complaints fix: (silly-canny-lib) fixed styling of BarChart.vue, Input.vue, Tabs.vue

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "npm": "^11.6.2",
     "silly-canny-lib": "file:../silly-canny-lib/silly-canny-lib-0.1.0.tgz",
     "tailwindcss": "^4.1.16",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
