--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,11 @@
   "dependencies": {
     "install": "^0.13.0",
     "npm": "^11.6.2",
+    "pinia": "^3.0.3",
     "silly-canny-lib": "file:../silly-canny-lib/silly-canny-lib-0.1.0.tgz",
     "tailwindcss": "^4.1.16",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3",
-    "vue-yandex-maps": "^2.2.3"
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
