--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.13.1",
     "install": "^0.13.0",
     "npm": "^11.6.2",
     "pinia": "^3.0.3",
